remove unused hycom links

--- a/notebooks/siwo_ice_animation.ipynb
+++ b/notebooks/siwo_ice_animation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate animation of ice from HYCOM to support Sea Ice for Walrus Outlook\n",
+    "# Generate animation of ice from HYCOM to support Sea Ice for Walrus Outlook (SIWO)\n",
     "\n",
     "## Purpose\n",
     "The SIWO community is supported by multiple groups including [ARCUS](https://www.arcus.org/siwo), the [National Weather Service Fairbanks Decision Support office](https://www.weather.gov/afg/SIWO_overview), and an active [Facebook community page](https://www.facebook.com/seaiceforwalrus).\n",
@@ -47,18 +47,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Let's get a file from the HYCOM THREDDS Server\n",
-    "NetCDF subset:  \n",
-    "https://ncss.hycom.org/thredds/catalog/GLBy0.08/expt_93.0/FMRC/ice/runs/catalog.html\n",
-    "\n",
-    "But each run gets it's own catalog entry:  \n",
-    "https://ncss.hycom.org/thredds/catalog/GLBy0.08/expt_93.0/FMRC/ice/runs/catalog.html?dataset=GLBy0.08/expt_93.0/FMRC/ice/runs/GLBy0.08_930_FMRC_ice_RUN_2022-03-17T12:00:00Z\n",
-    "\n",
-    "Then:  \n",
-    "https://ncss.hycom.org/thredds/ncss/grid/GLBy0.08/expt_93.0/FMRC/ice/runs/GLBy0.08_930_FMRC_ice_RUN_2022-03-17T12:00:00Z/dataset.html\n",
-    "\n",
-    "And this is the final query:  \n",
-    "https://ncss.hycom.org/thredds/ncss/GLBy0.08/expt_93.0/FMRC/ice/runs/GLBy0.08_930_FMRC_ice_RUN_2022-03-17T12:00:00Z?var=sic&var=siu&var=siv&north=80&west=150&east=250&south=45&disableProjSubset=on&horizStride=1&time_start=2022-03-17T12%3A00%3A00Z&time_end=2022-03-25T00%3A00%3A00Z&timeStride=1&accept=netcdf4"
+    "## HYCOM THREDDS Server\n",
+    "Forecasts are available from yesterday to ~7 days in the future."
    ]
   },
   {
@@ -88,7 +78,6 @@
     }
    ],
    "source": [
-    "%%time\n",
     "hycom = hycom[['sic', 'siv', 'siu']].load()"
    ]
   },
@@ -251,7 +240,6 @@
     }
    ],
    "source": [
-    "%%time\n",
     "times = hycom['sic']['time'].values\n",
     "make_map(hycom.sel(time=times[15]), times[15])"
    ]
