--- a/notebooks/siwo_ice_animation.ipynb
+++ b/notebooks/siwo_ice_animation.ipynb
@@ -57,8 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yes = Timestamp.today() - Timedelta('1 day')\n",
-    "loc = yes.strftime('https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/FMRC/ice/runs/GLBy0.08_930_FMRC_ice_RUN_%Y-%m-%dT12:00:00Z')\n",
+    "loc = 'https://tds.hycom.org/thredds/dodsC/GLBy0.08/expt_93.0/FMRC/ice/GLBy0.08_930_FMRC_ice_best.ncd'\n",
     "hycom = xr.open_dataset(loc, drop_variables='tau')\n",
     "hycom = hycom.sel(lat=slice(55,72), lon=slice(175,215))"
    ]
